--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -6,11 +6,11 @@
   justify-content: center;
   align-items: center;
   background: color.$white-05;
-  @media only screen and (min-width: 769px) and (max-width: 1439px) {
+  @media (min-width: 768px) and (max-width: 1439px) {
     height: 76px;
   }
 
-  @media only screen and (min-width: 1440px) {
+  @media (min-width: 1440px) {
     height: 72px;
   }
 }
@@ -22,11 +22,11 @@
   width: 393px;
   margin: 0 auto;
   padding: 0 16px;
-  @media only screen and (min-width: 769px) and (max-width: 1439px) {
+  @media (min-width: 768px) and (max-width: 1439px) {
     width: 768px;
   }
 
-  @media only screen and (min-width: 1440px) {
+  @media (min-width: 1440px) {
     width: 1920px;
     padding: 0 40px;
   }
@@ -41,18 +41,18 @@
 .header-logo {
   width: 150px;
   height: 18px;
-  @media only screen and (min-width: 769px) and (max-width: 1439px) {
+  @media (min-width: 768px) and (max-width: 1439px) {
     width: 152px;
   }
 
-  @media only screen and (min-width: 1440px) {
+  @media (min-width: 1440px) {
     width: 126px;
   }
 }
 
 .header-list {
   display: none;
-  @media only screen and (min-width: 1440px) {
+  @media (min-width: 1440px) {
     display: flex;
     gap: 24px;
   }
@@ -68,7 +68,7 @@
 .header-language {
   position: relative;
   display: none;
-  @media only screen and (min-width: 1440px) {
+  @media (min-width: 1440px) {
     display: block;
   }
 }
@@ -113,7 +113,7 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  @media only screen and (max-width: 767px) {
+  @media (max-width: 767px) {
     display: none;
   } 
 }
@@ -132,7 +132,7 @@
   border: none;
   color: color.$white-50;
   width: 112px;
-  @media only screen and (max-width: 1439px) {
+  @media (max-width: 1439px) {
     display: none;
   }
 }
@@ -145,7 +145,7 @@
   background-color: transparent;
   cursor: pointer;
   z-index: 10;
-  @media only screen and (min-width: 1440px) {
+  @media (min-width: 1440px) {
     display: none;
   }
 }
