--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -7,13 +7,13 @@
     background: #2d2d2f;
     z-index: 5;
     top: 52px;
-    @media only screen and (min-width: 769px) and (max-width: 1439px) {
+    @media (min-width: 768px) and (max-width: 1439px) {
       top: 76px;
       width: 50%;
       right: 0;
     }
   
-    @media only screen and (min-width: 1440px) {
+    @media (min-width: 1440px) {
       display: none;
     }
   }
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    @media only screen and (min-width: 769px) and (max-width: 1439px) {
+    @media (min-width: 768px) and (max-width: 1439px) {
       position: fixed;
     }
   }
@@ -69,7 +69,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    @media only screen and (min-width: 769px) and (max-width: 1439px) {
+    @media (min-width: 768px) and (max-width: 1439px) {
       padding: 0 16px;
     }
   }
