--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -3,22 +3,22 @@
   width: 100%;
   height: 466px;
   background-image: image-set(
-    url('../../public/img/contact/mobile.png') 1x,
-    url('../../public/img/contact/mobile@2x.png') 2x
+    url('/img/contact/mobile.png') 1x,
+    url('/img/contact/mobile@2x.png') 2x
   );
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   @media (min-width: 768px) and (max-width: 1439px) {
     background-image: image-set(
-      url('../../public/img/contact/tablet.png') 1x,
-      url('../../public/img/contact/tablet@2x.png') 2x
+      url('/img/contact/tablet.png') 1x,
+      url('/img/contact/tablet@2x.png') 2x
     );
   }
   @media (min-width: 1440px) {
     background-image: image-set(
-      url('../../public/img/contact/desktop.png') 1x,
-      url('../../public/img/contact/desktop@2x.png') 2x
+      url('/img/contact/desktop.png') 1x,
+      url('/img/contact/desktop@2x.png') 2x
     );
     height: 472px;
   }
