--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,11 @@
 @use './common/colors.scss' as color;
 @use './common/reset';
 @use './header.scss';
-@use './modal.scss';
+@use './order.scss';
+@use './progress.scss';
 @use './contact.scss';
 @use './footer.scss';
+@use './modal.scss';
 
 
 
