--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -38,6 +38,9 @@
 
 .contact-wrapper{
   padding: 32px 32px 40px 32px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    padding: 32px 0 40px 0;
+  }
 }
 
 .contact-fotos {
