--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -5,9 +5,40 @@
   padding: 40px 16px 80px 16px;
   @media (min-width: 768px) and (max-width: 1439px) {
     width: 768px;
+    padding: 34px 32px 80px 32px;
   }
   @media (min-width: 1440px) {
+    width: 1458px;
+  }
+}
+
+.order-bg {
+  @media (min-width: 1440px) {
+    background: color.$dark-grey;
     width: 968px;
+    padding: 48px 24px;
+    border-radius: 16px;
+  }
+  
+}
+
+.order-wraper {
+  position: relative;
+  @media (min-width: 1440px) {
+    width: 920px;
+  }
+}
+
+.order-picture {
+  @media (min-width: 768px) and (max-width: 1439px) {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  @media (min-width: 1440px) {
+    position: absolute;
+    right: 0;
+    top: 0;
   }
 }
 
@@ -16,19 +47,55 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 1;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    margin: 0 0 16px 0;
+    font-size: 24px;
+  }
+  @media (min-width: 1440px) {
+    margin: 0 0 16px 0;
+    font-weight: 600;
+    font-size: 32px;
+  }
 }
 
 .order-text {
   font-weight: 700;
   font-size: 20px;
   margin-bottom: 24px;
+  @media (min-width: 1440px) {
+    font-weight: 400;
+    font-size: 24px;
+  }
 }
 
-.order-list {
+.order-text span {
+  @media (min-width: 768px) and (max-width: 1439px) {
+    font-weight: 400;
+    font-size: 16px;
+  }
+  @media (min-width: 1440px) {
+    font-weight: 400;
+    font-size: 16px;
+  }
+}
+
+.order-h4 {
   font-weight: 500;
   font-size: 18px;
-  line-height: 1.55556;
+  line-height: 1.55;
+  margin-bottom: 8px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    font-weight: 400;
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+  @media (min-width: 1440px) {
+    font-weight: 400;
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
 }
+
 
 .order-list li {
   display: flex;
@@ -36,6 +103,12 @@
   gap: 8px;
   font-size: 14px;
   line-height: 1.4;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    font-weight: 300;
+  }
+  @media (min-width: 1440px) {
+    font-weight: 300;
+  }
 }
 
 .order-list2 {
@@ -43,6 +116,14 @@
   flex-wrap: wrap;
   gap: 8px;
   margin: 24px 0 32px 0;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    width: 320px;
+    margin: 32px 0 32px 0;
+  }
+  @media (min-width: 1440px) {
+    width: 320px;
+    margin: 32px 0 0 0;
+  }
 }
 
 .order-list2 li {
@@ -54,6 +135,7 @@
 }
 
 .order-btn {
+  display: block;
   width: 100%;
   height: 56px;
   border-radius: 8px;
@@ -62,4 +144,172 @@
   font-weight: 400;
   font-size: 16px;
   color: color.$white;
+  border: none;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    width: 197px;
+    margin: 0 auto;
+  }
+  @media (min-width: 1440px) {
+    display: none;
+  }
+}
+
+.order-add {
+  margin-top: 32px;
+  @media (min-width: 1440px) {
+    margin-top: 40px;
+    border-top: 1px solid #4f4f51;
+  }
+}
+
+.order-add-title {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 24px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    margin-bottom: 32px;
+  }
+  @media (min-width: 1440px) {
+    font-weight: 400;
+    font-size: 24px;
+    margin-top: 16px;
+  }
+}
+
+.order-add-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    gap: 24px;
+  }
+  @media (min-width: 1440px) {
+    gap: 24px;
+  }
+}
+
+.order-add-item {
+  border-radius: 8px;
+  width: 176px;
+  height: 108px;
+  background: color.$white-10 ;
+  padding: 8px 41px 8px 16px;
+  position: relative;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    width: 340px;
+    height: 77px;
+    padding: 8px 40px 8px 40px;
+  }
+  @media (min-width: 1440px) {
+    width: 290px;
+    height: 77px;
+    padding: 8px 40px 8px 40px;
+  }
+}
+
+.order-add-wrapper {
+  display: flex;
+  flex-direction: column;  
+  height: 92px; 
+  justify-content: space-between; 
+  @media (min-width: 768px) and (max-width: 1439px) {
+    height: 61px; 
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+  }
+  @media (min-width: 1440px) {
+    height: 61px; 
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+  }
+}
+
+.order-add-wrapper svg {
+  margin-top: 0; 
+  @media (min-width: 768px) and (max-width: 1439px) {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    width: 24px;
+    height: 24px;
+  }
+  @media (min-width: 1440px) {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.order-add-item-p1 {
+  margin: auto 0; 
+  font-size: 14px;
+  line-height: 1.4;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    margin-top: 0;
+    font-size: 16px;
+    margin-left: 16px;
+  }
+  @media (min-width: 1440px) {
+    margin-top: 0;
+    font-size: 16px;
+    margin-left: 16px;
+  }
+}
+
+.order-add-item-p2 {
+  margin-bottom: 0;
+  font-weight: 600;
+  font-size: 16px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    font-weight: 700;
+    font-size: 20px;
+    margin-left: 16px;
+  }
+  @media (min-width: 1440px) {
+    font-weight: 700;
+    font-size: 20px;
+    margin-left: 16px;
+  }
+}
+
+.order-add-item-div {
+  width: 33px;
+  height: 108px;
+  background: color.$white-20;
+  position: absolute;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    height: 77px;
+  }
+  @media (min-width: 1440px) {
+    height: 77px;
+  }
+}
+
+.order-add-btn {
+  display: block;
+  margin-top: 32px;
+  border-radius: 8px;
+  padding: 18px 24px;
+  width: 361px;
+  height: 56px;
+  background: color.$primary;
+  font-weight: 400;
+  font-size: 16px;
+  color: color.$white;
+  border: none;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    width: 210px;
+    margin: 32px auto 0 auto;
+  }
+  @media (min-width: 1440px) {
+    display: none;
+  }
 }
