--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -98,6 +98,12 @@ left: 43px;
   border: none;
   color: color.$white;
   font-size: 16px;
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(182, 136, 103, 0.7);;
+  }
+  &:active {
+    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  }
   @media (min-width: 768px) and (max-width: 1439px) {
     margin: 32px 0 0 0;
   }
