--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -99,6 +99,12 @@
   border: none;
   font-size: 16px;
   color: color.$white;
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(182, 136, 103, 0.7);;
+  }
+  &:active {
+    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  }
   @media (min-width: 768px) and (max-width: 1439px) {
     width: 124px;
     height: 48px;
@@ -133,6 +139,9 @@
   margin-top: 24px;
   display: flex;
   gap: 16px;
+  :hover {
+    color: color.$primary;
+  }
   @media (min-width: 768px) and (max-width: 1439px) {
     margin-top: 0;
   }
