--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -6,10 +6,12 @@
   justify-content: center;
   align-items: center;
   background: color.$white-05;
+  position: fixed;
+  top: 0;
+  z-index: 10;
   @media (min-width: 768px) and (max-width: 1439px) {
     height: 76px;
   }
-
   @media (min-width: 1440px) {
     height: 72px;
   }
@@ -55,6 +57,11 @@
   @media (min-width: 1440px) {
     display: flex;
     gap: 24px;
+  }
+}
+.header-item {
+  :hover {
+    color: color.$primary;
   }
 }
 
