--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -6,9 +6,8 @@
     height: 100vh;
     background: #2d2d2f;
     z-index: 5;
-    top: 52px;
+    top: 0;
     @media (min-width: 768px) and (max-width: 1439px) {
-      top: 76px;
       width: 50%;
       right: 0;
     }
@@ -36,12 +35,15 @@
   }
 
   .modal-list {
-    margin-top: 32px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     gap: 24px;
     font-weight: 700;
     font-size: 24px;
+    :hover {
+      color: color.$primary;
+    }
   }
 
   .modal-btn {
@@ -58,6 +60,12 @@
     justify-content: center;
     gap: 8px;
     margin-bottom: 24px;
+    &:hover {
+      box-shadow: 0 0 10px 0 rgba(182, 136, 103, 0.7);;
+    }
+    &:active {
+      box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    }
   }
 
   .modal-svg {
@@ -78,9 +86,15 @@
     display: flex;
     align-items: center;
     gap: 4px;
+    :hover {
+      color: color.$primary;
+    }
   }
 
   .modal-language {
     position: relative;
+    :hover {
+      color: color.$primary;
+    }
   }
 
