--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -5,10 +5,12 @@
   padding: 40px 16px 80px 16px;
   @media (min-width: 768px) and (max-width: 1439px) {
     width: 768px;
-    padding: 34px 32px 80px 32px;
+    padding: 34px 16px 80px 16px;
   }
   @media (min-width: 1440px) {
+    margin-top: 72px;
     width: 1458px;
+    position: relative;
   }
 }
 
@@ -19,7 +21,6 @@
     padding: 48px 24px;
     border-radius: 16px;
   }
-  
 }
 
 .order-wraper {
@@ -96,7 +97,6 @@
   }
 }
 
-
 .order-list li {
   display: flex;
   align-items: center;
@@ -145,6 +145,12 @@
   font-size: 16px;
   color: color.$white;
   border: none;
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(182, 136, 103, 0.7);;
+  }
+  &:active {
+    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  }
   @media (min-width: 768px) and (max-width: 1439px) {
     width: 197px;
     margin: 0 auto;
@@ -193,11 +199,11 @@
   border-radius: 8px;
   width: 176px;
   height: 108px;
-  background: color.$white-10 ;
+  background: color.$white-10;
   padding: 8px 41px 8px 16px;
   position: relative;
   @media (min-width: 768px) and (max-width: 1439px) {
-    width: 340px;
+    width: 356px;
     height: 77px;
     padding: 8px 40px 8px 40px;
   }
@@ -208,23 +214,27 @@
   }
 }
 
+.order-add-active {
+  background-color: color.$primary;
+}
+
 .order-add-wrapper {
   display: flex;
-  flex-direction: column;  
-  height: 92px; 
-  justify-content: space-between; 
+  flex-direction: column;
+  height: 92px;
+  justify-content: space-between;
   @media (min-width: 768px) and (max-width: 1439px) {
-    height: 61px; 
+    height: 61px;
     border-left: 1px solid rgba(255, 255, 255, 0.2);
   }
   @media (min-width: 1440px) {
-    height: 61px; 
+    height: 61px;
     border-left: 1px solid rgba(255, 255, 255, 0.2);
   }
 }
 
 .order-add-wrapper svg {
-  margin-top: 0; 
+  margin-top: 0;
   @media (min-width: 768px) and (max-width: 1439px) {
     position: absolute;
     top: 8px;
@@ -242,7 +252,7 @@
 }
 
 .order-add-item-p1 {
-  margin: auto 0; 
+  margin: auto 0;
   font-size: 14px;
   line-height: 1.4;
   @media (min-width: 768px) and (max-width: 1439px) {
@@ -293,6 +303,10 @@
   }
 }
 
+.order-add-item-div-active {
+  background: #c5a085;
+}
+
 .order-add-btn {
   display: block;
   margin-top: 32px;
@@ -305,6 +319,12 @@
   font-size: 16px;
   color: color.$white;
   border: none;
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(182, 136, 103, 0.7);;
+  }
+  &:active {
+    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  }
   @media (min-width: 768px) and (max-width: 1439px) {
     width: 210px;
     margin: 32px auto 0 auto;
@@ -312,4 +332,288 @@
   @media (min-width: 1440px) {
     display: none;
   }
+}
+
+.insurance {
+  margin-top: 32px;
+  @media (min-width: 1440px) {
+    margin-top: 40px;
+    border-top: 1px solid color.$white-20;
+  }
+}
+
+.insurance-title {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 24px;
+  @media (min-width: 1440px) {
+    margin-top: 16px;
+  }
+}
+
+.insurance-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    flex-direction: row;
+    gap: 16px;
+  }
+  @media (min-width: 1440px) {
+    flex-direction: row;
+    gap: 16px;
+  }
+}
+
+.insurance-item {
+  border-radius: 16px;
+  padding: 16px 13px;
+  width: 100%;
+  height: 280px;
+  background: rgba(255, 255, 255, 0.05);
+  @media (min-width: 768px) and (max-width: 1439px) {
+    height: 357px;
+  }
+  @media (min-width: 1440px) {
+    height: 334px;
+  }
+}
+
+.insurance-active {
+  background: color.$primary;
+}
+
+.insurance-p {
+  text-align: center;
+  margin-bottom: 8px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    font-size: 16px;
+  }
+}
+
+.insurance-h2 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1;
+  text-align: center;
+  margin-bottom: 16px;
+  @media (min-width: 1440px) {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+  }
+}
+
+.insurance-p2 {
+  margin-bottom: 16px;
+}
+
+.insurance-list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+.insurance-li {
+  display: flex;
+  gap: 8px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+.insurance-p3 {
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 1.4;
+  color: color.$white-30;
+}
+
+.confirming {
+  position: relative;
+  @media (min-width: 1440px) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 430px;
+  }
+}
+
+.confirming-title {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-top: 32px;
+  margin-bottom: 24px;
+  @media (min-width: 1440px) {
+    font-weight: 400;
+    font-size: 24px;
+  }
+}
+
+.confirming-form {
+  width: 361px;
+  font-size: 14px;
+  line-height: 1.4;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    width: 352px;
+  }
+  @media (min-width: 1440px) {
+    width: 430px;
+  }
+}
+
+.confirming-info span {
+  color: color.$primary;
+}
+
+label {
+  display: block;
+  margin-bottom: 6px;
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  margin-bottom: 24px;
+  border: 1px solid #4f4f51;
+  border-radius: 8px;
+  padding: 12px 14px;
+  width: 361px;
+  height: 48px;
+  background-color: transparent;
+  font-size: 16px;
+  line-height: 1.5;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    width: 352px;
+  }
+  @media (min-width: 1440px) {
+    width: 430px;
+  }
+}
+
+.confirming-details {
+  border-radius: 16px;
+  padding: 16px;
+  width: 361px;
+  height: 200px;
+  background: rgba(255, 255, 255, 0.04);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 24px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    position: absolute;
+    width: 352px;
+    height: 193px;
+    top: 0;
+    right: 0;
+  }
+  @media (min-width: 1440px) {
+    width: 430px;
+  }
+}
+
+.confirming-flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.total {
+  margin-top: 24px;
+  border-top: 1px solid #4f4f51;
+  padding-top: 8px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.55556;
+}
+
+.accept {
+display: flex;
+align-items: center;
+gap: 12px;
+cursor: pointer;
+}
+.accept-checkbox {
+  display: none;
+}
+
+.accept-svg {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: color.$primary;
+  border-radius: 6px;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    background-image: url('/svg/icon.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: .2s;
+    margin-top: 1px;
+  }
+}
+
+.accept-checkbox:checked + .accept-svg::before {
+  opacity: 1;
+} 
+
+.accept-text {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.payment-btns {
+  margin-top: 34px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    flex-direction: row;
+    justify-content: center;
+  }
+  @media (min-width: 1440px) {
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+}
+
+.payment-btn {
+  border-radius: 8px;
+  padding: 18px 24px;
+  width: 361px;
+  height: 56px;
+  background: color.$primary;
+  border: none;
+  font-weight: 400;
+  font-size: 16px;
+  color: color.$white;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    width: 230px;
+  }
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(182, 136, 103, 0.7);;
+  }
+  &:active {
+    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  }
+}
+
+.inactive {
+  background: rgba(182, 136, 103, 0.2);
 }
