--- a/src/scss/progress.scss
+++ b/src/scss/progress.scss
@@ -2,6 +2,10 @@
 .progress {
   background-color: color.$dark-grey;
   border-top: 1px solid color.$white-20;
+  margin-top: 52px;
+  @media (min-width: 768px) and (max-width: 1439px) {
+    margin-top: 76px;
+  }
   @media (min-width: 1440px) {
     display: none;
   }
@@ -40,7 +44,7 @@
   z-index: 2;
 }
 
-.active {
+.activ {
   background: color.$primary;
   box-shadow: 0px 0px 20px rgb(243, 118, 1);
 }
