--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -85,6 +85,9 @@ left: 43px;
   @media (min-width: 768px) and (max-width: 1439px) {
     width: 460px;
   }
+  @media (min-width: 1440px) {
+    width: 440px;
+  }
 }
 
 .contact-btn {
